@@ -217,7 +217,8 @@ extern int value_optimized_out (struct value *value);
 extern void set_value_optimized_out (struct value *value, int val);
 extern int value_embedded_offset (struct value *value);
 extern void set_value_embedded_offset (struct value *value, int val);
-#define VALUE_POINTED_TO_OFFSET(val) ((val)->pointed_to_offset)
+extern int value_pointed_to_offset (struct value *value);
+extern void set_value_pointed_to_offset (struct value *value, int val);
 
 /* Convert a REF to the object referenced.  */
 
